--- a/Changes
+++ b/Changes
@@ -1,10 +1,54 @@
-v0.1.xx
 
-  - "file:" protocol works for FIG_REMOTE_HOME.
+v0.1.47-48
+
+  - Exception, regex, and test refactoring.
+
+  - Fixing operator precedence in environment.
+
+  - Updated copyright years.
+
+  - Changed README example to use file:// URL.
+
+  - Change ssh:// tests to file:// tests.
+
+  - Refactored '[package]' substitution.
+
+  - Implemented @ escaping in variables.
+
+  - Finalizing figrc name for URL whitelist.
+
+v0.1.46
+
+  - Rakefile improvements.
+
+  - Fixing broken reference to Fig::Logging in environment.rb.
+
+
+v0.1.43-0.1.45
+
+  - Rakefile improvements.
+
+  - Test file refactoring/improvements.
 
   - Complains if it has nothing to do.
 
+v0.1.42
+
+  - Fig::Package refactoring.
+
+  - "file:" protocol works for FIG_REMOTE_HOME.
+
   - Testing no longer requires ssh.
+
+  - Implemented whitelist chceking after parse.
+
+  - Simplify character classes in grammar, slight grammar refactoring.
+
+  - Supports MacOS (better) in Rakefile.
+
+  - No longer emits stack trace for invalid command line option(s).
+
+  - Tests emits std(out|err) on failure, for ease in debugging test failures.
 
 
 v0.1.41
