--- a/Changes
+++ b/Changes
@@ -1,5 +1,24 @@
 v0.1.xx
 
+  - "--list-variables" option.  This will display all variables manipulated by
+    Fig, following package dependencies recursively.  Can have
+    "--list-all-configs" and "--list-tree" applied to it for tracking down
+    where that nasty setting of EDITOR to "emacs" comes from.
+
+    Example "--list-variables --list-tree" output:
+
+        A/1.2.3
+        |   CLASSPATH = something:$CLASSPATH
+        |   FROM_A    = blah
+        '---C/5.6.7
+        |       CLASSPATH = something_else:$CLASSPATH
+        |       FROM_C    = blah
+        '---B/1.2.3
+                CLASSPATH = planet_x:$CLASSPATH
+                FROM_B    = blah
+
+    See README.md for more.
+
   - The .fig file created in a repository now contains metadata about
     the publishing of the package (time/user/host).
 
