Add known bugs to Changes and README.md.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 v0.1.xx
 
+  Known bugs:
+
+  - --list-dependencies and --list-variables don't take overrides into account.
+
+  New features:
+
   - "--list-variables" option.  This will display all variables manipulated by
     Fig, following package dependencies recursively.  Can have
     "--list-all-configs" and "--list-tree" applied to it for tracking down
