Include --command-extra-argv in usage message.

--- a/Changes
+++ b/Changes
@@ -23,6 +23,10 @@ v0.1.xx
 
     Suggestions for changes to the output format welcome.
 
+  - "--command-extra-argv" option.  Allows you to say that the rest of the fig
+    command-line is to be appended to the end of the command in a "command"
+    statement.
+
   - The .fig file created in a repository now contains metadata about
     the publishing of the package (time/user/host).
 
