--- a/Changes
+++ b/Changes
@@ -30,8 +30,8 @@ v0.1.xx
   - The .fig file created in a repository now contains metadata about
     the publishing of the package (time/user/host).
 
-  - Logging output is colorized if going to a tty.  This is not the
-    colorization of package adds/removes that will eventually be restored.
+  - Logging output is colorized if going to a tty.  This includes restoration
+    of the old colorization of local package downloads/deletions.
 
   Significant Internals:
 
