--- a/Changes
+++ b/Changes
@@ -34,6 +34,12 @@ v0.1.xx
     of the old colorization of local package downloads/deletions.  Colors are
     not currently configurable.
 
+  - The primary package is now treated the same as other packages as far as
+    updates are concerned.  Previously, if you started with a new environment,
+    e.g. FIG_HOME was empty, running "fig foo/1.2.3 -- echo foo" would fall
+    over.  Even asking for updates ("fig --update foo/1.2.3 -- echo foo")
+    wouldn't change anything.  Now the latter case will work.
+
   Significant Internals:
 
   - The definition of a package descriptor has become more restrictive in the
