--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+v0.1.58.alpha.2
+
+  - The test suite passes on MS Windows!
+
 v0.1.58.alpha.1
 
   Backwards incompatibilities:
@@ -49,8 +53,6 @@ v0.1.58.alpha.1
     e.g. FIG_HOME was empty, running "fig foo/1.2.3 -- echo foo" would fall
     over.  Even asking for updates ("fig --update foo/1.2.3 -- echo foo")
     wouldn't change anything.  Now the latter case will work.
-
-  - The test suite passes on MS Windows!
 
   Significant Internals:
 
