--- a/Changes
+++ b/Changes
@@ -1,14 +1,10 @@
-v0.1.60.alpha.2
+v0.1.61
 
   New features:
 
   - Constraints on the values of "resource", "append", "path", "add", and "set"
     statements greatly relaxed (prompted by C++ libraries with "++" in their
     names).
-
-v0.1.60.alpha.1
-
-  New features:
 
   - The package name can now include a "_" for parsing. Previously you could
     publish a package with an underscore in the name but would be unable to
@@ -17,6 +13,11 @@ v0.1.60.alpha.1
   Bug fixes:
 
   - Removed dependency on the 'ftp' gem.
+
+v0.1.60.alpha.2
+v0.1.60.alpha.1
+
+  - Test releases
 
 v0.1.59
 
