Update Changes for v0.1.62.
(After already releasing v0.1.62. *ahem* Whoops.)

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+v0.1.62
+
+  Bug fixes:
+
+  - Fixed stack trace when encountering conflicting dependency package
+    versions.
+
 v0.1.61
 
   New features:
