--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 v0.1.??
 
+  Backwards incompatibilities:
+
+  - Running fig --publish or --publish-local with --resource or --archive
+    options without also specifying a --set or --append option is now an error.
+
+    What would previously happen is that the --resource and --archive options
+    were ignored and package.fig locating would happen and the publish would be
+    based only on that.  Probably not what was intended.
+
   New features:
 
   - Now checks repository format version and fails if it's different from what
