--- a/Changes
+++ b/Changes
@@ -27,6 +27,8 @@ v0.1.??
     does change, then current code could possibly corrupt the future
     repository.
 
+  - Now warns about ineffectual "retrieve" statements.
+
   Bug fixes:
 
   - Now checks that archive base names are unique before allowing publishing.
