--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+v0.1.xxx
+
+  Backwards incompatibilities:
+
+  - Using --publish with --update{,-if-missing} may fail if you have
+    versionless includes.  Fig would previously ignore the
+    --update{,-if-missing} but it now always applies the update.  Workaround:
+    do the update and the publish separately.
+
 v0.1.65
 
   Bug fixes:
