--- a/Changes
+++ b/Changes
@@ -20,6 +20,8 @@ v0.1.xxx
   - Updating and using any of the --list-* options would delete any previously
     retrieved files.
 
+  - More fixes in dealing with symlinks.
+
 v0.1.65
 
   Bug fixes:
