--- a/Changes
+++ b/Changes
@@ -1,11 +1,4 @@
-v0.1.66.beta.2
-
-  Bug fixes:
-
-  - Better error reporting for failed installations and package version
-    conflicts.
-
-v0.1.66.beta.1
+v0.1.67
 
   Backwards incompatibilities:
 
@@ -19,15 +12,20 @@ v0.1.66.beta.1
     - Publishing may fail if you have versionless includes.  Workaround: don't
       use versionless includes or do the update and the publish separately.
 
-  - Fig::Command::Options#strip_shell_command() is no longer public.  Use
-    Fig::Command::Options.strip_shell_command() instead.
-
   Bug fixes:
 
   - Updating and using any of the --list-* options would delete any previously
     retrieved files.
 
   - More fixes in dealing with symlinks.
+
+  - Better error reporting for failed installations and package version
+    conflicts.
+
+v0.1.66.beta.2
+v0.1.66.beta.1
+
+  - Test releases
 
 v0.1.65
 
